syntax = "proto3";

package pb;

option go_package = "github.com/techschool/simplebank/pb";

message ResetPasswordRequest {
    string code = 1;
    string email = 2;
    string password = 3;
}

message ResetPasswordResponse {
    bool is_updated = 1;
}